init: add ui
